mobile width overflow fixed
also great CI/CD test

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -64,6 +64,10 @@ body {
     border-color: #fff;
 }
 
+.hero-image {
+    max-width: 100%;
+}
+
 /* Quiz styles */
 .form-check-input:checked {
     background-color: #0254ec;
